Modification Acce BDD

--- a/FicheRecetteXaml/FicheRecette/FicheRecette.csproj
+++ b/FicheRecetteXaml/FicheRecette/FicheRecette.csproj
@@ -243,5 +243,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="XSQLXTables\tables.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
