--- a/FicheRecetteASP_NET_Core_MCV/.gitignore
+++ b/FicheRecetteASP_NET_Core_MCV/.gitignore
@@ -329,4 +329,4 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 # Connection.cs
-bibliothequeado.net/Tools/Connection.cs
+FicheRecette/Tools/Connection.cs
