--- a/FicheRecetteASP_NET_Core_MCV/.gitignore
+++ b/FicheRecetteASP_NET_Core_MCV/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+.suo
 *.suo
 *.user
 *.userosscache
@@ -24,12 +25,12 @@ bld/
 [Oo]bj/
 [Ll]og/
 
-# Visual Studio 2015/2017 cache/options directory
+# Visual Studio 2015/2017/2019 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
-# Visual Studio 2017 auto generated files
+# Visual Studio 2017/2019 auto generated files
 Generated\ Files/
 
 # MSTest test Results
