--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/.gitignore
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+MyProject\FicheRecetteASP_NET_Core_MVC\.vs\FicheRecette\v15\.suo
 *.suo
 *.user
 *.userosscache
